--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,20 @@ main {
   gap: 1rem;
   padding: 1rem 15rem;
 }
+@media (max-width: 768px) {
+  .app-container {
+    padding: 1rem 3rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .app-container {
+    padding: 1rem 2rem;
+  }
+}
+@media (max-width: 414px) {
+  .app-container {
+    padding: 1rem 0.5rem;
+    flex-direction: column;
+  }
+}
