--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,13 @@ main {
   gap: 1rem;
   padding: 1rem 15rem;
 }
+
+@media (max-width: 1024px) {
+  .app-container {
+    padding: 1rem 5rem;
+  }
+}
+
 @media (max-width: 768px) {
   .app-container {
     padding: 1rem 3rem;
