--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -31,34 +37,4 @@ button:hover {
 main {
   max-width: 1200px;
   margin: 0 auto;
-}
-
-.app-container {
-  display: flex;
-  gap: 1rem;
-  padding: 1rem 15rem;
-}
-
-@media (max-width: 1024px) {
-  .app-container {
-    padding: 1rem 5rem;
-  }
-}
-
-@media (max-width: 768px) {
-  .app-container {
-    padding: 1rem 3rem;
-  }
-}
-
-@media (max-width: 600px) {
-  .app-container {
-    padding: 1rem 2rem;
-  }
-}
-@media (max-width: 414px) {
-  .app-container {
-    padding: 1rem 0.5rem;
-    flex-direction: column;
-  }
 }
